# prompt-library

./: .gitignore  ROADMAP.md  package-lock.json  package.json
renderer/: app.js  index.html  quicksave.html  quicksave.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
